--- a/employee_listing_page.html
+++ b/employee_listing_page.html
@@ -254,7 +254,7 @@
                                     <span>${getTimeElapsed(employee.timestamp)}</span>
                                 </div>
                                 <div class="flex space-x-3 rtl:space-x-reverse">
-                                    <a href="chat.html?employeeId=${employee.id}"
+                                    <a href="chat.html"
                                         class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 text-sm">
                                         <i class="fas fa-envelope ml-1"></i> تواصل
                                     </a>
